--- a/PROJECT/FIRST/index.html
+++ b/PROJECT/FIRST/index.html
@@ -5,23 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://kit.fontawesome.com/289f71a5e7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="elevation-1" id="header">
-        <div id="brand">brand</div>
-        <a class="button-header" id="home">
-            <div class="material-icons">home</div>
-            <p>accueil</p>
-        </a>
-        <a class="button-header" id="shop">
-            <div class="material-icons">checkroom</div>
-            <p>boutique</p>
-        </a>
-    </div>
-    <div class="elevation-1" id="footer"></div>
+    <header class="elevation-1" id="header">
+        <div id="brand"><a href="#">brand</a></div>
+        <div class="button-header">
+            <a id="home">
+                <i class="fas fa-home fa-lg"></i>
+                <p>accueil</p>
+            </a>
+            <a id="shop">
+                <i class="fas fa-tshirt fa-lg"></i>
+                <p>boutique</p>
+            </a>
+            <a id="login">
+                <i class="far fa-user"></i>
+                <p>connexion</p>
+            </a>
+        </div>
+    </header>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+        </br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vero
+            fugiat fugit mollitia, consectetur iste, repellat itaque molestias nihil minima eius debitis hic corporis? Mollitia iusto consequuntur quasi dignissimos animi.</p>
+    </section>
+
+    <footer class="elevation-1" id="footer">
+        <div class="link-footer">
+            <a>
+                <p>Signaler un bug</p>
+            </a>
+            <a>
+                <p>Contactez-nous</p>
+            </a>
+        </div>
+
+        <div class="button-footer">
+            <a>
+                <div class="fab fa-twitter"></div>
+            </a>
+            <a>
+                <div class="fab fa-twitch"></div>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
